hphp/hack/test/typecheck/gen4a.php.exp
File "gen4a.php", line 20, characters 19-21:
The method `foo` is not compatible with the overridden method (Typing[4341])
  File "gen4a.php", line 20, characters 23-23:
  `T` is a constrained type parameter
  File "gen4a.php", line 20, characters 28-28:
  This type constraint is violated
  File "gen4a.php", line 20, characters 28-28:
  Expected `B`
  File "gen4a.php", line 20, characters 23-23:
  But got `T as A`
